--- a/index.html
+++ b/index.html
@@ -22,14 +22,45 @@
 
             </div>
             <div class="lower  back_color rounded ">
-                <img src="images/Lib.svg" alt="Library" class="invert">
-                Your Library
-                
-                
+                <div class="lib flex ">
+                    <img src="images/Lib.svg" alt="Library" class="invert">
+                    <h2>Your Library</h2>
+
+                </div>
+                <footer>
+                    <div class="legal">
+                        <p class="legal-1">Legal</p>
+                        <p class="legal-1">Safety&Privacy center</p>
+                        <p class="legal-1">Privacy policy</p>
+                        <p class="legal-1">Cookies</p>
+                        <p class="legal-1">About ads</p>
+                        <p class="legal-1">Accesblity</p>
+                        <p class="legal-1">Cookies</p>
+                    </div>
+                </footer>
+
             </div>
 
         </div>
-        <div class="right  test_margin">
+        <div class="right rounded">
+            <div class="header">
+                <div class="arrow">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path 
+                            d="M16.2426 6.34317L14.8284 4.92896L7.75739 12L14.8285 19.0711L16.2427 17.6569L10.5858 12L16.2426 6.34317Z"
+                            fill="currentColor" />
+                    </svg>
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z"
+                            fill="currentColor" />
+                    </svg>
+                </div>
+                <nav>
+                    <button class="invert">Sign up</button>
+                    <button>Login</button>
+                </nav>
+            </div>
         </div>
 
     </div>
