--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
                     <button>Login</button>
                 </nav>
             </div>
+            <div class="playlist">
+                <h2 class="playlist-1">Popular Playlist</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
+                        <h3>Sajni</h3>
+                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
     </div>
