--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
 
             </div>
             <div class="lower  back_color rounded ">
-                <div class="lib flex ">
+                <div class="lib flex">
                     <img src="images/Lib.svg" alt="Library" class="invert">
                     <h2>Your Library</h2>
+
+                </div>
+                <div class="song_name" id="song_name">
+                    <ol type="1">
+                        <li type="1">Hello my name is </li>
+                        <li>Hello my name is </li>
+                        <li>Hello my name is </li>
+                    </ol>
 
                 </div>
                 <footer>
