--- a/test.html
+++ b/test.html
@@ -1,57 +1,6 @@
-DOCTYPE html>
-		<html>
-			<head>
-				<style>
-					table td {
-						padding:4px;
-					}
-				</style>
-				<title>Index of /songs/</title>
-			</head>
-			<body>
-			<h1>Index of /songs/</h1>
-
-			<table>
-				<th>Name</th><th>Size</th><th>Date Modified</th>
-				
-				<tr>
-				<td><a href="../">../</a></td>
-				<td></td>
-				<td></td>
-				</tr>
-
-				<tr>
-				<td><a href="\songs\CUTE DEPRESSED (320).mp3">CUTE DEPRESSED (320).mp3</a></td>
-				<td>3.7 MB</td>
-				<td>6/29/24, 19:18:11</td>
-				</tr>
-
-				<tr>
-				<td><a href="\songs\DNA (320).mp3">DNA (320).mp3</a></td>
-				<td>3.4 MB</td>
-				<td>6/29/24, 19:19:16</td>
-				</tr>
-
-				<tr>
-				<td><a href="\songs\Eternxlkz.mp3">Eternxlkz.mp3</a></td>
-				<td>1.4 MB</td>
-				<td>6/29/24, 19:15:15</td>
-				</tr>
-
-				<tr>
-				<td><a href="\songs\MONTAGEM INVASÃO (320).mp3">MONTAGEM INVASÃO (320).mp3</a></td>
-				<td>2.9 MB</td>
-				<td>6/29/24, 19:20:53</td>
-				</tr>
-
-				<tr>
-				<td><a href="\songs\SONIC.EXE (320).mp3">SONIC.EXE (320).mp3</a></td>
-				<td>3.3 MB</td>
-				<td>6/29/24, 19:22:05</td>
-				</tr>
-
-			</table>
-			</body>
-
-			<script type="text/javascript" src="/___vscode_livepreview_injected_script"></script>
-		</html>
+<ol>
+	<li>HEllo</li>
+	<li>HEllo</li>
+	<li>HEllo</li>
+	<li>HEllo</li>
+</ol>
