--- a/index.html
+++ b/index.html
@@ -27,12 +27,22 @@
                     <h2>Your Library</h2>
 
                 </div>
-                <div class="song_name " id="song_name">
-                    <ol type="1">
-                       
-                    </ol>
+                <div class="song-list border ">
+
+                    <div class="songcard">
+                        <img class="invert" src="controls/music.svg" alt="">
+                        <div class="songinfo">
+                            <div class="song__name">
+                                Song Name
+                            </div>
+                        </div>
+                        <img src="controls/play.svg" alt="">
+                    </div>
+
 
                 </div>
+
+
                 <footer>
                     <div class="legal">
                         <p class="legal-1">Legal</p>
@@ -45,6 +55,7 @@
                     </div>
                 </footer>
 
+            
             </div>
 
         </div>
