--- a/index.html
+++ b/index.html
@@ -27,28 +27,9 @@
                     <h2>Your Library</h2>
 
                 </div>
-                <div class="song-list border ">
+                <div class="song-list " id="song-list">
 
-                    <div class="songcard">
-                        <img class="invert" src="controls/music.svg" alt="">
-                        <div class="songinfo">
-                            <div class="song__name">
-                                Song Name
-                            </div>
-                        </div>
-                        <img src="controls/play.svg" alt="">
-                    </div>
-
-
-
-
-
-
-
-
-
-                                    
-
+                    <!-- from the javascript file -->
 
 
                 </div>
