changes for android

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="container flex ">
         <div class="left  ">
             <div class="upper   back_color rounded ">
+                <img class="close invert" src="images/close.svg" alt="">
+
                 <img src="images/logo.svg" alt="main_logo" class="invert logo">
                 <ul>
                     <li class="p-1"><img src="images/home.svg" alt="home" class="invert"> Home</li>
@@ -163,15 +165,20 @@
 
                     <div class="songtime">
                         <div id="current_time">
-
+                        
                         </div>
                         <div id="duration">
 
                         </div>
 
                     </div>
+                    <div class="speaker">
+                        <img class="invert volume_button" src="images/volume.svg" alt="volume" width="18">
+                        <input type="range" name="range" id="range" class="range">
+                    </div>
 
 
+                
                 </div>
 
                 <div class="sickbar">
