changes for playlist

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="containerofsonglist">
 
-                    <div class="song-list flex" id="song-list">
+                    <div class="song-list flex" id="song-list" data-folder="other songs">
                         
                         <!-- from the javascript file -->
                         
@@ -89,7 +89,7 @@
 
 
 
-                    <div class="card">
+                    <div class="card card_1" data-folder="other songs">
                         <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
                         <h3>Sajni</h3>
                         <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
@@ -108,36 +108,7 @@
                         <h3>Sajni</h3>
                         <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
                     </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5f4378b1ffc9119fdc7306d" alt="Song_image ">
-                        <h3>Sajni</h3>
-                        <p>Ram Sampath,Arijit Singh,Prashant Pandey</p>
-                    </div>
+
 
 
 
